-
Bug
-
Resolution: Fixed
-
P4
-
hs14, 6u10, 7, 8u151
-
b03
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8190600 | 8u171 | David Buck | P4 | Resolved | Fixed | b01 |
| JDK-8186527 | 8u162 | David Buck | P4 | Resolved | Fixed | b01 |
| JDK-8198053 | emb-8u171 | David Buck | P4 | Resolved | Fixed | b01 |
Test case:
1. Create a thread and measure a number of jni global refs shown by jstack
i.e. jstack output
JNI global references: 629
2. Increase the jni global refs count by calling of NewGlobalRef method 1000 times
i.e. jstack output
JNI global references: 1608
3. Decrease the jni global refs count by calling of DeleteGlobalRef method 1000 times
i.e. UNEXPECTED jstack output
JNI global references: 1612
The behavior is the same for all platforms/configurations and may be not a jstack's bug.
To run existing test
1. ssh vmsqe-b2500-02.russia
2. cd /set/vmsqe/execution/results/adhoc/os161219_tmtools/2008-01-16_1/vm/SOLARIS-SPARC/client/mixed/vm-SOLARIS-SPARC_client_mixed_my.tmtools.testlist2008-01-16-19-52-33/ResultDir/globalrefcount/
3. sh rerun.sh
affected test
tmtools/jstack/jniglobalref/globalrefcount
1. Create a thread and measure a number of jni global refs shown by jstack
i.e. jstack output
JNI global references: 629
2. Increase the jni global refs count by calling of NewGlobalRef method 1000 times
i.e. jstack output
JNI global references: 1608
3. Decrease the jni global refs count by calling of DeleteGlobalRef method 1000 times
i.e. UNEXPECTED jstack output
JNI global references: 1612
The behavior is the same for all platforms/configurations and may be not a jstack's bug.
To run existing test
1. ssh vmsqe-b2500-02.russia
2. cd /set/vmsqe/execution/results/adhoc/os161219_tmtools/2008-01-16_1/vm/SOLARIS-SPARC/client/mixed/vm-SOLARIS-SPARC_client_mixed_my.tmtools.testlist2008-01-16-19-52-33/ResultDir/globalrefcount/
3. sh rerun.sh
affected test
tmtools/jstack/jniglobalref/globalrefcount
- backported by
-
JDK-8186527 jstack: DeleteGlobalRef method call doesn't lead to descreasing of global refs count shown by jstack
-
- Resolved
-
-
JDK-8190600 jstack: DeleteGlobalRef method call doesn't lead to descreasing of global refs count shown by jstack
-
- Resolved
-
-
JDK-8198053 jstack: DeleteGlobalRef method call doesn't lead to descreasing of global refs count shown by jstack
-
- Resolved
-